# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.7
#

2005-03-14 20:31:41 GMT	John Goerzen <jgoerzen@complete.org>	patch-205

    Summary:
      added Maybe.hs
    Revision:
      missingh--head--0.7--patch-205


    new files:
     MissingH/Maybe.hs

    modified files:
     ChangeLog MissingH.cabal MissingH/Debian.hs


2005-03-14 19:40:09 GMT	John Goerzen <jgoerzen@complete.org>	patch-204

    Summary:
      Checkpointing new Debian tools
    Revision:
      missingh--head--0.7--patch-204


    new files:
     MissingH/Debian.hs MissingH/Debian/.arch-ids/=id
     MissingH/Debian/ControlParser.hs

    modified files:
     ChangeLog MissingH.cabal

    new directories:
     MissingH/Debian MissingH/Debian/.arch-ids


2005-02-14 22:37:01 GMT	John Goerzen <jgoerzen@complete.org>	patch-203

    Summary:
      ConfigParser: accept empty values
    Revision:
      missingh--head--0.7--patch-203


    modified files:
     ChangeLog MissingH/ConfigParser/Lexer.hs debian/changelog


2005-02-03 21:59:32 GMT	John Goerzen <jgoerzen@complete.org>	patch-202

    Summary:
      Added more info to README
    Revision:
      missingh--head--0.7--patch-202


    modified files:
     ChangeLog README


2005-02-03 21:29:55 GMT	John Goerzen <jgoerzen@complete.org>	patch-201

    Summary:
      Various tidying
    Revision:
      missingh--head--0.7--patch-201


    new files:
     announcements/0.9.0.txt

    modified files:
     ChangeLog INSTALL README debian/changelog


2005-02-03 21:16:01 GMT	John Goerzen <jgoerzen@complete.org>	patch-200

    Summary:
      Streamlined debian build system
    Revision:
      missingh--head--0.7--patch-200


    modified files:
     ChangeLog debian/rules


2005-02-03 21:00:48 GMT	John Goerzen <jgoerzen@complete.org>	patch-199

    Summary:
      checkpointing doc fixes
    Revision:
      missingh--head--0.7--patch-199


    modified files: