@@ -35,7 +35,7 @@ Written by John Goerzen, jgoerzen\@complete.org
 module MissingH.Debian (-- * Control or Similar File Utilities
                         ControlFile,
                         -- * Version Number Utilities
-                        DebVersion, compareDebVersion
+                        DebVersion, compareDebVersion, checkDebVersion
                        )
 where
 import System.Cmd
@@ -61,16 +61,14 @@ of 'Prelude.Ord', but you can also use 'compareDebVersion' if you prefer. -}
 data DebVersion = DebVersion String
                 deriving (Eq)
 instance Ord DebVersion where
-    compare v1 v2 = 
+    compare (DebVersion v1) (DebVersion v2) = 
         {- This is OK since compareDebVersion should always be the same. -}
         unsafePerformIO $ compareDebVersion v1 v2
 
-compareDebVersion :: DebVersion -> DebVersion -> IO Ordering
-compareDebVersion (DebVersion v1) (DebVersion v2) =
-    let runit op = do ec <- rawSystem "dpkg" ["--compare-versions", v1, op, v2]
-                      case ec of 
-                              ExitSuccess -> return True
-                              ExitFailure _ -> return False
+{- | Compare the versions of two packages. -}
+compareDebVersion :: String -> String -> IO Ordering
+compareDebVersion v1 v2 =
+    let runit op = checkDebVersion v1 op v2
         in do islt <- runit "lt"
               if islt
                  then return LT
@@ -79,3 +77,12 @@ compareDebVersion (DebVersion v1) (DebVersion v2) =
                             then return GT
                             else return EQ
 
+checkDebVersion :: String       -- ^ Version 1
+                -> String       -- ^ Operator
+                -> String       -- ^ Version 2
+                -> IO Bool
+checkDebVersion v1 op v2 =
+    do ec <- rawSystem "dpkg" ["--compare-versions", v1, op, v2]
+       case ec of 
+               ExitSuccess -> return True
+               ExitFailure _ -> return False
